# kiibohd-firmware

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  Pipfile  README.md
.github/workflows/: rust_linux.yml
common/: build.rs  common_makefile.toml  gdbinit  jlink.gdb
common/cargo/: config_atsam4s8b_nobootloader  config_thumb7em-none-eabi
common/memory/: atsam4s4b.x  atsam4s4b_ble.x  atsam4s8b.x  atsam4s8b_nobootloader.x
common/xtask/: Cargo.toml
common/xtask/src/: main.rs
hexgears/gemini/: .gdbinit  Cargo.toml  Makefile.toml  Pipfile  README.md  build.rs  memory.x  project.env  scancode_map.kll
hexgears/gemini/.cargo/: config
hexgears/gemini/src/: bin.rs  controller.rs  lib.rs
inputclub/keyboards/keystone/tkl/: .gdbinit  Cargo.toml  Makefile.toml  README.md  build.rs  project.env  scancode_map.kll
inputclub/keyboards/keystone/tkl/.cargo/: config
inputclub/keyboards/keystone/tkl/src/: bin.rs  lib.rs
