[workspace]
members = [
    "common/xtask",
    "hexgears/gemini",
    "inputclub/keyboards/keystone/tkl",
]

# XXX Important when using gdb XXX
# NOTE: Comment this section out when using gdb for a better experience
#       Will increase binary size considerably though.
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
