[package]
name = "gemini"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>", "Zion Koyl <hiszd1@gmail.com>"]
edition = "2021"
description = "Hexgears Gemini Dusk/Dawn Keyboard"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4s8b", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gemini"
path = "src/bin.rs"

[dependencies]
const_env = "0.1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "0.6.0-rc.4"
defmt = "0.2"
defmt-rtt = "0.2"
embedded-hal = "0.2.5"
embedded-time = "0.10.1"
heapless = "0.7"
kiibohd-hid-io = { git = "https://github.com/kiibohd/kiibohd-core.git" }
kiibohd-keyscanning = { git = "https://github.com/kiibohd/kiibohd-core.git" }
kiibohd-usb = { git = "https://github.com/kiibohd/kiibohd-core.git", default-features = false, features = ["hidio", "defmt-default"] }
nb = "~0.1"
panic-probe = { version = "0.2", features = ["print-defmt"] }
paste = "1.0"

[dependencies.atsam4-hal]
git = "https://github.com/haata/atsam4-hal.git"
version = "0.1.15"
default-features = false
features = ["atsam4s8b", "usb", "defmt-default"]

[features]
default = [
    "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
